name:               BrainHask
version:            0.1.0.0
synopsis:           An implementation of a toy language with a rude name
homepage:           www.github.com/alexj136/BrainHask
author:             Alex Jeffery
maintainer:         A.P.Jeffery@sussex.ac.uk
category:           Language
build-type:         Simple
cabal-version:      >= 1.10
executable BrainHask
  default-language:     Haskell2010
  hs-source-dirs:       src/
  build-depends:        base
  main-is:              Main.hs
